syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/go-park-mail-ru/2023_2_OND_team/internal/api/messenger";

package messenger;

service Messenger {
    rpc UserChatsWithOtherUsers(FeedChatRequest) returns (FeedChat) {}
    rpc SendMessage(Message) returns (MsgID) {}
    rpc MessageFromChat(FeedMessageRequest) returns (FeedMessage) {}
    rpc UpdateMessage(Message) returns (google.protobuf.Empty) {}
    rpc DeleteMessage(MsgID) returns (google.protobuf.Empty) {}
    rpc GetMessage(MsgID) returns (Message) {}
}

message MsgID {
    int64 id = 1;
}

message Message {
    MsgID id = 1;
    int64 user_from = 2;
    int64 user_to = 3;
    string content = 4;
}

message Chat {
    int64 userID1 = 1;
    int64 userID2 = 2;
}

message FeedChatRequest {
    int64 count = 1;
    int64 lastID = 2;
}

message FeedMessageRequest {
    Chat chat = 1;
    int64 count = 2;
    int64 lastID = 3;
}

message WichWhomChat {
    int64 userID = 1;
    string username = 2;
    string avatar = 3;
}

message ChatWithUser {
    int64 lastMessageID = 1;
    ChatWithUser chat = 2;
}

message FeedMessage {
    repeated Message messages = 1;
    int64 lastID = 2;
}

message FeedChat {
    repeated ChatWithUser chats = 1;
}
