syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/go-park-mail-ru/2023_2_OND_team/internal/api/realtime";

package realtime;

service RealTime {
    rpc Publish(PublishMessage) returns (google.protobuf.Empty) {}
    rpc Subscribe(Channels) returns (stream Message) {}
}

message Channels {
    repeated Channel chans = 1;
}

message Channel {
    string topic = 1;
    string name = 2;
}

enum EventType {
    EV_CREATE = 0;
    EV_DELETE = 1;
    EV_UPDATE = 2;
}

message EventObject {
    int64 id = 1;
    EventType type = 2;
}

message EventMap {
    int64 type = 1;
    map<string, string> m = 2;
}

message Message {
    oneof body {
        EventObject object = 1;
        EventMap content = 2;
    }
}

message PublishMessage {
    Channel channel = 1;
    Message message = 2;
}
